tests/baselines/reference/propertyNamesWithStringLiteral.errors.txt
propertyNamesWithStringLiteral.ts(10,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== propertyNamesWithStringLiteral.ts (1 errors) ====
    class _Color {
        a: number; r: number; g: number; b: number;
    }
    
    interface NamedColors {
        azure: _Color;
        "blue": _Color;
        "pale blue": _Color;
    }
    module Color {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var namedColors: NamedColors;
    }
    var a = Color.namedColors["azure"];
    var a = Color.namedColors.blue; // Should not error
    var a = Color.namedColors["pale blue"]; // should not error
    